--- a/style.css
+++ b/style.css
@@ -39,3 +39,14 @@ body {
 #post {
     padding: 1em
 }
+footer{
+    height: 50px;
+}
+footer div{
+    
+    background-color: #333;
+    height: 100%;
+}
+footer p{
+    color: white;
+}
