--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ footer{
 }
 footer div{
     
-    background-color: #333;
+    background-color: rgb(32, 19, 28);
     height: 100%;
 }
 footer p{
